--- a/SimpleGame/MainWindow.xaml
+++ b/SimpleGame/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:views="clr-namespace:SimpleGame.Views"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="MainWindow" Height="{Binding Height}" Width="{Binding Width}"
+        Title="MainWindow" Height="600" Width="400"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
     <Grid>
         <Grid.Resources>
